--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -32,3 +33,16 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+.gitignore
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.eslintcache
+node_modules
+
+# alclopes
+/docsPrj
+project.md
+*_old.*
+*_old
